--- a/Documentation/tutorials/EdgeBridgeTutorialAppStart/app/src/main/res/values/strings.xml
+++ b/Documentation/tutorials/EdgeBridgeTutorialAppStart/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EdgeBridgeTutorialAppStart</string>
+    <string name="app_name">EdgeBridgeTutorialApp</string>
     <string name="action_settings">Settings</string>
 
     <!-- First fragment view strings -->
